--- a/shaun-haldane-blog-angular/src/app/public/project/project.component.html
+++ b/shaun-haldane-blog-angular/src/app/public/project/project.component.html
@@ -5,7 +5,7 @@
     <p><br></p>
     <div [innerHTML]="project.content"></div>
     <p><br></p>
-    <p>Last updated: {{project.lastUpdated}}</p>
+    <p>Last updated: {{project.lastUpdated | date: 'dd/MM/yyyy'}}</p>
     <p><br></p>
     <div *ngIf="showAddComment; else showSignin">
         <div style="width: 80%; margin: auto;">
@@ -39,7 +39,7 @@
     <p><br></p>
     <div *ngFor="let c of project.comments">
         <div style="border-width:1px; border-style:solid; border-color:#48494a">
-            <p><u>{{c.username}}: {{c.datePosted}}</u></p>
+            <p><u>{{c.username}}: {{c.datePosted | date: 'dd/MM/yyyy'}}</u></p>
             <p>{{c.content}}</p>
         </div>
         <p><br></p>
